[package]
name = "bear_reader"
version = "0.1.0"
authors = ["ylgrgyq <gr@ylgrgyq.com>"]
edition = "2018"
description = "A command line tool to read articles from Bear."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"
strum = "0.18.0"
strum_macros="0.18.0"
clap = "2.33.3"
rusqlite = "0.23.1"
lazy_static = "1.4.0"
[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"
percent-encoding = "2.1.0"
itertools = "0.9.0"