[package]
name = "rs_swimmer"
version = "0.1.0"
authors = ["ylgrgyq <gr@ylgrgyq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = { version = "0.6.0" }